--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ MarkupSafe==3.0.2
 matplot==0.1.9
 matplotlib==3.10.1
 mdurl==0.1.2
-ml_dtypes==0.5.1
+ml-dtypes==0.3.2
 more-itertools==10.6.0
 mpmath==1.3.0
 multidict==6.4.3
@@ -102,7 +102,7 @@ regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
-rich==14.0.0
+rich==13.9.4
 rpds-py==0.23.1
 safetensors==0.5.3
 scikit-learn==1.6.1
@@ -118,7 +118,7 @@ sympy==1.13.1
 ta==0.11.0
 ta-lib==0.6.3
 tenacity==9.0.0
-tensorboard==2.19.0
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.2
 tensorflow-io-gcs-filesystem==0.37.1
