--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ MarkupSafe==3.0.2
 matplot==0.1.9
 matplotlib==3.10.1
 mdurl==0.1.2
-ml-dtypes==0.3.2
+ml-dtypes>=0.5.1,<1.0.0
 more-itertools==10.6.0
 mpmath==1.3.0
 multidict==6.4.3
