--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ MarkupSafe==3.0.2
 matplot==0.1.9
 matplotlib==3.10.1
 mdurl==0.1.2
-ml-dtypes>=0.5.1,<1.0.0
+ml-dtypes>=0.5.1
 more-itertools==10.6.0
 mpmath==1.3.0
 multidict==6.4.3
@@ -116,7 +116,6 @@ soupsieve==2.6
 streamlit==1.43.2
 sympy==1.13.1
 ta==0.11.0
-ta-lib==0.6.3
 tenacity==9.0.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
